--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>BE Playsound List</title>
 
+  <!-- Google Analytics 4 -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DNYVPBW6JQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-DNYVPBW6JQ');
+</script>
+
   <!-- ===== SEO basics ===== -->
   <meta name="description" content="Search and play Minecraft Bedrock Edition sound events in your browser. Filter by name, tweak pitch, and preview instantly.">
   <meta name="keywords" content="minecraft, bedrock, playsound, sound list, sound events, audio preview">
