--- a/index.html
+++ b/index.html
@@ -6,40 +6,41 @@
   <title>BE Playsound List</title>
 
   <!-- Google Analytics 4 -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-DNYVPBW6JQ"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'G-DNYVPBW6JQ');
-</script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-DNYVPBW6JQ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-DNYVPBW6JQ');
+  </script>
 
-  <!-- ===== SEO basics ===== -->
-  <meta name="description" content="Search and play Minecraft Bedrock Edition sound events in your browser. Filter by name, tweak pitch, and preview instantly.">
-  <meta name="keywords" content="minecraft, bedrock, playsound, sound list, sound events, audio preview">
-  <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+  <!-- SEO Meta Tags -->
+  <meta name="title" content="BE Playsound List - Minecraft Bedrock Edition Sound Library">
+  <meta name="description" content="Explore and listen to every sound event available in Minecraft Bedrock Edition. Search, preview, and learn the exact sound names for use in your projects or commands.">
+  <meta name="keywords" content="Minecraft, Bedrock, BE, playsound, sound list, sound library, game sounds, audio, Minecraft sounds">
+  <meta name="author" content="1309-boy">
+  <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://playsoundlist.xyz/">
-  <link rel="sitemap" type="application/xml" href="/sitemap.xml">
+  <link rel="sitemap" type="application/xml" href="https://playsoundlist.xyz/sitemap.xml">
 
-  <!-- Open Graph / Facebook -->
+  <!-- Open Graph -->
   <meta property="og:type" content="website">
-  <meta property="og:title" content="BE Playsound List">
-  <meta property="og:description" content="Browse, search, and preview Minecraft Bedrock sound events.">
+  <meta property="og:title" content="BE Playsound List - Minecraft Bedrock Edition Sound Library">
+  <meta property="og:description" content="A complete searchable sound library for Minecraft Bedrock Edition — listen to all playsound events directly in your browser.">
   <meta property="og:url" content="https://playsoundlist.xyz/">
-  <!-- If you prepare an image, uncomment the next line and set the absolute URL -->
-  <!-- <meta property="og:image" content="https://playsoundlist.xyz/og-image.png"> -->
+  <meta property="og:image" content="https://playsoundlist.xyz/icon.png">
 
   <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="BE Playsound List">
-  <meta name="twitter:description" content="Browse, search, and preview Minecraft Bedrock sound events.">
-  <!-- <meta name="twitter:image" content="https://playsoundlist.xyz/og-image.png"> -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="BE Playsound List - Minecraft Bedrock Edition Sound Library">
+  <meta name="twitter:description" content="Listen to every Minecraft BE sound event, all in one searchable sound library.">
+  <meta name="twitter:image" content="https://playsoundlist.xyz/icon.png">
 
-  <!-- JSON-LD: WebSite with SearchAction -->
+  <!-- JSON-LD Structured Data -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "WebSite",
+    "@type": "Website",
     "name": "BE Playsound List",
     "url": "https://playsoundlist.xyz/",
     "potentialAction": {
@@ -49,23 +50,6 @@
     }
   }
   </script>
-
-  <!-- Perf: preconnect to assets host (GitHub Pages) -->
-  <link rel="dns-prefetch" href="https://1309-boy.github.io">
-  <link rel="preconnect" href="https://1309-boy.github.io" crossorigin>
-
-  <!-- PWA/Chrome UI niceties (optional) -->
-  <meta name="theme-color" content="#111">
-
-  <!-- (Optional) GA4: replace G-XXXXXXX with your Measurement ID
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXX"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-XXXXXXX');
-  </script>
-  -->
 
   <style>
     :root { --bg:#111; --panel:#1a1a1a; --line:#2c2c2c; --muted:#aaa; --fg:#eee; --accent:#16a34a; }
@@ -90,15 +74,18 @@
     input[type="range"]{width:240px}
   </style>
 </head>
+
 <body>
   <div class="wrap">
     <h1>BE Playsound List</h1>
 
     <div class="toolbar">
-      <div class="search"><input id="q" type="text" placeholder="Search events (e.g., beacon.pow, ui.loom ...)" /></div>
-      <div class="pagesize"><select id="pagesize">
-        <option>25</option><option>50</option><option selected>100</option><option>200</option>
-      </select></div>
+      <div class="search"><input id="q" type="text" placeholder="Search sounds (e.g., beacon.pow, ui.loom ...)" /></div>
+      <div class="pagesize">
+        <select id="pagesize">
+          <option>25</option><option>50</option><option selected>100</option><option>200</option>
+        </select>
+      </div>
     </div>
 
     <div class="pager">
@@ -127,7 +114,7 @@ const state = {
   pageSize: 100,
 };
 
-const playIndex = {};   // name -> next index
+const playIndex = {};
 let currentAudio = null;
 let currentKey   = null;
 let currentPlayBtn = null;
@@ -136,7 +123,7 @@ let currentPlayBtn = null;
 let audioUnlocked = false;
 let webCtx = null;
 
-/* ------------- helpers: DOM refs ---------------- */
+/* ------------- helpers ---------------- */
 const $list   = document.getElementById('list');
 const $count  = document.getElementById('count');
 const $q      = document.getElementById('q');
@@ -145,48 +132,25 @@ const $prev   = document.getElementById('prev');
 const $next   = document.getElementById('next');
 const $pagesize = document.getElementById('pagesize');
 
-/* ------------- normalize / mapping -------------- */
-function normalizeDefSound(s) {
-  if (!s) return null;
-  if (typeof s === 'string') return { name: s };
-  if (typeof s === 'object' && s.name) return { name: s.name };
-  return null;
-}
-function soundToBasePath(s) {
-  return s.replace(/^sounds\//,''); // "sounds/..." -> "..."
-}
+/* ----------------- utils -------------------- */
+function normalizeDefSound(s){ if(!s)return null; if(typeof s==='string')return{name:s}; if(s.name)return{name:s.name}; return null;}
+function soundToBasePath(s){ return s.replace(/^sounds\//,''); }
 function baseToUrl(base){ return `${GH_BASE}/sounds_flat/${base}.wav`; }
-
-/* manifest membership check */
-function inManifest(url){
-  if (state.manifestSet.has(url)) return true;
-  const rel = url.replace(`${GH_BASE}/`,'');
-  if (state.manifestSet.has(rel)) return true;
-  const onlyPath = url.replace(/^https?:\/\/[^/]+\//,'');
-  if (state.manifestSet.has(onlyPath)) return true;
-  return false;
-}
+function inManifest(url){ if(state.manifestSet.has(url))return true; const rel=url.replace(`${GH_BASE}/`,''); if(state.manifestSet.has(rel))return true; const onlyPath=url.replace(/^https?:\/\/[^/]+\//,''); return state.manifestSet.has(onlyPath); }
 
 /* ----------------- rendering -------------------- */
-function fmtPage() {
-  const total = state.filtered.length;
-  const pages = Math.max(1, Math.ceil(total / state.pageSize));
-  const page  = Math.min(state.page + 1, pages);
-  $pageinfo.textContent = `Page ${page} of ${pages}`;
-}
+function fmtPage(){ const total=state.filtered.length; const pages=Math.max(1,Math.ceil(total/state.pageSize)); const page=Math.min(state.page+1,pages); $pageinfo.textContent=`Page ${page} of ${pages}`; }
 
 function render(){
-  $list.innerHTML = '';
-  const start = state.page * state.pageSize;
-  const end   = Math.min(start + state.pageSize, state.filtered.length);
-  const items = state.filtered.slice(start, end);
-
-  for (const item of items){
-    const card = document.createElement('div');
-    card.className = 'card';
-    card.dataset.key = item.name;
-
-    card.innerHTML = `
+  $list.innerHTML='';
+  const start=state.page*state.pageSize;
+  const end=Math.min(start+state.pageSize,state.filtered.length);
+  const items=state.filtered.slice(start,end);
+  for(const item of items){
+    const card=document.createElement('div');
+    card.className='card';
+    card.dataset.key=item.name;
+    card.innerHTML=`
       <div class="title">${item.name}</div>
       <div class="row">
         <button class="btn play">Play</button>
@@ -196,53 +160,40 @@ function render(){
         <span class="label">Pitch:</span>
         <input class="pitch" type="range" min="0.1" max="2.0" step="0.1" value="1.0"/>
         <span class="pitch-val">1.0</span>
-      </div>
-    `;
+      </div>`;
     $list.appendChild(card);
   }
-
-  $count.textContent = `Showing ${start+1}-${end} of ${state.filtered.length} sounds`;
+  $count.textContent=`Showing ${start+1}-${end} of ${state.filtered.length} sounds`;
   fmtPage();
 }
 
 /* ----------------- events ----------------------- */
 $q.addEventListener('input', applyFilter);
-$pagesize.addEventListener('change', ()=>{
-  state.pageSize = parseInt($pagesize.value,10);
-  state.page = 0;
-  render();
-});
-$prev.addEventListener('click', ()=>{
-  if (state.page>0){ state.page--; render(); }
-});
-$next.addEventListener('click', ()=>{
-  const pages = Math.ceil(state.filtered.length / state.pageSize);
-  if (state.page < pages-1){ state.page++; render(); }
-});
+$pagesize.addEventListener('change', ()=>{ state.pageSize=parseInt($pagesize.value,10); state.page=0; render(); });
+$prev.addEventListener('click', ()=>{ if(state.page>0){ state.page--; render(); } });
+$next.addEventListener('click', ()=>{ const pages=Math.ceil(state.filtered.length/state.pageSize); if(state.page<pages-1){ state.page++; render(); } });
 
-document.addEventListener('input', (e)=>{
-  if (!e.target.matches('.pitch')) return;
-  const card = e.target.closest('.card');
-  const key  = card?.dataset?.key;
-  card.querySelector('.pitch-val').textContent = e.target.value;
-  if (currentAudio && currentKey === key){
-    currentAudio.playbackRate = parseFloat(e.target.value || '1.0');
-  }
+document.addEventListener('input',(e)=>{
+  if(!e.target.matches('.pitch'))return;
+  const card=e.target.closest('.card');
+  const key=card?.dataset?.key;
+  card.querySelector('.pitch-val').textContent=e.target.value;
+  if(currentAudio&&currentKey===key){ currentAudio.playbackRate=parseFloat(e.target.value||'1.0'); }
 });
 
 document.addEventListener('click',(e)=>{
-  const playBtn = e.target.closest('.btn.play');
-  if (playBtn){
-    const card = playBtn.closest('.card');
-    const key = card?.dataset?.key;
-    if (key) playKey(key, playBtn);
+  const playBtn=e.target.closest('.btn.play');
+  if(playBtn){
+    const card=playBtn.closest('.card');
+    const key=card?.dataset?.key;
+    if(key)playKey(key,playBtn);
     return;
   }
-  const stopBtn = e.target.closest('.btn.stop');
-  if (stopBtn){
-    const card = stopBtn.closest('.card');
-    const key = card?.dataset?.key;
-    if (key) stopKey(key);
+  const stopBtn=e.target.closest('.btn.stop');
+  if(stopBtn){
+    const card=stopBtn.closest('.card');
+    const key=card?.dataset?.key;
+    if(key)stopKey(key);
   }
 });
 
@@ -252,157 +203,124 @@ document.addEventListener('click',(e)=>{
 });
 async function unlockAudio(){
   try{
-    const AC = window.AudioContext || window.webkitAudioContext;
-    if (AC){
-      webCtx = new AC();
-      if (webCtx.state === 'suspended') await webCtx.resume();
-      const buf = webCtx.createBuffer(1, 1, 22050);
-      const src = webCtx.createBufferSource();
-      src.buffer = buf; src.connect(webCtx.destination); src.start(0);
+    const AC=window.AudioContext||window.webkitAudioContext;
+    if(AC){
+      webCtx=new AC();
+      if(webCtx.state==='suspended')await webCtx.resume();
+      const buf=webCtx.createBuffer(1,1,22050);
+      const src=webCtx.createBufferSource();
+      src.buffer=buf; src.connect(webCtx.destination); src.start(0);
     }
-    const a = new Audio('data:audio/mp3;base64,//uQZAAAAAAAAAAAAAAAAAAAAAAAWGlinZwAAAA8AAAACAAACcQCAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA==');
-    a.volume = 0; a.play().then(()=>{ a.pause(); a.currentTime = 0; }).catch(()=>{});
-    audioUnlocked = true;
+    const a=new Audio('data:audio/mp3;base64,//uQZAAAAAAAAAAAAAAAAAAAAAAAWGluZwAAAA8AAAACAAACcQCAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA==');
+    a.volume=0; a.play().then(()=>{a.pause();a.currentTime=0;}).catch(()=>{});
+    audioUnlocked=true;
   }catch(_){}
 }
 
 /* ----------------- logic: play/stop ------------- */
 function nextUrlFor(key){
-  const item = state.itemsByName.get(key);
-  if (!item || !item.files?.length) return null;
-  const idx = ( (playIndex[key]||0) % item.files.length );
-  playIndex[key] = idx + 1;
+  const item=state.itemsByName.get(key);
+  if(!item||!item.files?.length)return null;
+  const idx=((playIndex[key]||0)%item.files.length);
+  playIndex[key]=idx+1;
   return baseToUrl(item.files[idx]);
 }
 
-async function playKey(key, btn){
-  // stop current
-  if (currentAudio){
-    try { currentAudio.pause(); currentAudio.currentTime = 0; } catch(e){}
-    if (currentPlayBtn) currentPlayBtn.classList.remove('playing');
-    currentAudio = null; currentKey = null; currentPlayBtn = null;
+async function playKey(key,btn){
+  if(currentAudio){
+    try{ currentAudio.pause(); currentAudio.currentTime=0; }catch(e){}
+    if(currentPlayBtn)currentPlayBtn.classList.remove('playing');
+    currentAudio=null; currentKey=null; currentPlayBtn=null;
   }
 
-  const url = nextUrlFor(key);
-  if (!url || !inManifest(url)){
-    console.warn('Sound not found or not in manifest:', key);
-    return;
-  }
+  const url=nextUrlFor(key);
+  if(!url||!inManifest(url)){ console.warn('Sound not found or not in manifest:',key); return; }
 
-  const card = document.querySelector(`.card[data-key="${CSS.escape(key)}"]`);
-  const pitch = parseFloat(card.querySelector('.pitch').value || '1.0');
+  const card=document.querySelector(`.card[data-key="${CSS.escape(key)}"]`);
+  const pitch=parseFloat(card.querySelector('.pitch').value||'1.0');
 
-  const audio = new Audio(url);
-  audio.crossOrigin = 'anonymous';
-  audio.preload = 'auto';
-  audio.playbackRate = pitch;
+  const audio=new Audio(url);
+  audio.crossOrigin='anonymous';
+  audio.preload='auto';
+  audio.playbackRate=pitch;
 
-  currentAudio = audio; currentKey = key; currentPlayBtn = btn;
+  currentAudio=audio; currentKey=key; currentPlayBtn=btn;
   btn.classList.add('playing');
 
-  audio.onended = ()=>{
-    if (currentPlayBtn) currentPlayBtn.classList.remove('playing');
-    currentAudio = null; currentKey = null; currentPlayBtn = null;
-  };
+  audio.onended=()=>{ if(currentPlayBtn)currentPlayBtn.classList.remove('playing'); currentAudio=null; currentKey=null; currentPlayBtn=null; };
 
   try{
-    if (!audioUnlocked) await unlockAudio();
+    if(!audioUnlocked)await unlockAudio();
     await audio.play();
   }catch(err){
-    // fail silently to avoid UX popups
-    console.debug('play() blocked or failed quietly:', err?.name || err);
     btn.classList.remove('playing');
-    currentAudio = null; currentKey = null; currentPlayBtn = null;
+    currentAudio=null; currentKey=null; currentPlayBtn=null;
   }
 }
 
 function stopKey(key){
-  if (currentAudio && currentKey === key){
-    try{ currentAudio.pause(); currentAudio.currentTime = 0; }catch(e){}
-    if (currentPlayBtn) currentPlayBtn.classList.remove('playing');
-    currentAudio = null; currentKey = null; currentPlayBtn = null;
+  if(currentAudio&&currentKey===key){
+    try{ currentAudio.pause(); currentAudio.currentTime=0; }catch(e){}
+    if(currentPlayBtn)currentPlayBtn.classList.remove('playing');
+    currentAudio=null; currentKey=null; currentPlayBtn=null;
   }
 }
 
 /* ----------------- filtering -------------------- */
 function applyFilter(){
-  const q = ($q.value || '').toLowerCase().trim();
-  if (!q){
-    state.filtered = state.items.slice();
-  }else{
-    state.filtered = state.items.filter(it => it.name.toLowerCase().includes(q));
-  }
-  state.page = 0;
-  render();
+  const q=($q.value||'').toLowerCase().trim();
+  state.filtered=!q?state.items.slice():state.items.filter(it=>it.name.toLowerCase().includes(q));
+  state.page=0; render();
 }
 
 /* ----------------- loading ---------------------- */
 async function loadManifest(){
-  const r = await fetch(MANIFEST_URL, {cache:'no-store'});
-  if (!r.ok) throw new Error(`manifest load failed: HTTP ${r.status}`);
-  const j = await r.json();
-
-  let urls = [];
-  if (Array.isArray(j)) urls = j;
-  else if (Array.isArray(j.entries)) urls = j.entries.map(e=>e.url).filter(Boolean);
-  else if (Array.isArray(j.urls)) urls = j.urls;
-  else if (j.files && Array.isArray(j.files)) urls = j.files;
-
-  const s = new Set();
-  for (const u of urls){
-    if (!u) continue;
+  const r=await fetch(MANIFEST_URL,{cache:'no-store'});
+  if(!r.ok)throw new Error(`manifest load failed: HTTP ${r.status}`);
+  const j=await r.json();
+  let urls=[];
+  if(Array.isArray(j))urls=j;
+  else if(Array.isArray(j.entries))urls=j.entries.map(e=>e.url).filter(Boolean);
+  else if(Array.isArray(j.urls))urls=j.urls;
+  else if(j.files&&Array.isArray(j.files))urls=j.files;
+  const s=new Set();
+  for(const u of urls){
+    if(!u)continue;
     s.add(u);
-    const rel = u.replace(`${GH_BASE}/`,'');
+    const rel=u.replace(`${GH_BASE}/`,'');
     s.add(rel);
-    const onlyPath = u.replace(/^https?:\/\/[^/]+\//,'');
+    const onlyPath=u.replace(/^https?:\/\/[^/]+\//,'');
     s.add(onlyPath);
   }
-  state.manifestSet = s;
+  state.manifestSet=s;
 }
 
 async function loadDefinitions(){
-  const r = await fetch(DEFINITIONS_URL, {cache:'no-store'});
-  if (!r.ok) throw new Error(`sound_definitions load failed: HTTP ${r.status}`);
-  const defsAll = await r.json();
-  const defs = defsAll.sound_definitions || defsAll;
-
-  const items = [];
-  const map = new Map();
-
-  for (const [key, def] of Object.entries(defs)){
-    if (!def || !Array.isArray(def.sounds)) continue;
-
-    const files = def.sounds
-      .map(normalizeDefSound)
-      .filter(Boolean)
-      .map(s => soundToBasePath(s.name))
-      .filter(Boolean)
-      .filter(base => inManifest(baseToUrl(base)));
-
-    if (!files.length) continue;
-
-    const item = { name: key, files, stream: !!def.stream };
+  const r=await fetch(DEFINITIONS_URL,{cache:'no-store'});
+  if(!r.ok)throw new Error(`sound_definitions load failed: HTTP ${r.status}`);
+  const defsAll=await r.json();
+  const defs=defsAll.sound_definitions||defsAll;
+  const items=[]; const map=new Map();
+  for(const [key,def] of Object.entries(defs)){
+    if(!def||!Array.isArray(def.sounds))continue;
+    const files=def.sounds.map(normalizeDefSound).filter(Boolean).map(s=>soundToBasePath(s.name)).filter(Boolean).filter(base=>inManifest(baseToUrl(base)));
+    if(!files.length)continue;
+    const item={name:key,files,stream:!!def.stream};
     items.push(item);
-    map.set(key, item);
+    map.set(key,item);
   }
-
   items.sort((a,b)=>a.name.localeCompare(b.name));
-  state.items = items;
-  state.itemsByName = map;
-  state.filtered = items.slice();
+  state.items=items; state.itemsByName=map; state.filtered=items.slice();
 }
 
 /* ----------------- init ------------------------- */
 (async function init(){
   try{
-    state.pageSize = parseInt($pagesize.value,10);
+    state.pageSize=parseInt($pagesize.value,10);
     await loadManifest();
     await loadDefinitions();
     render();
-  }catch(err){
-    console.error(err);
-    // silent UI
-  }
+  }catch(err){ console.error(err); }
 })();
 </script>
 </body>
