--- a/index.html
+++ b/index.html
@@ -24,17 +24,21 @@
   <link rel="sitemap" type="application/xml" href="https://playsoundlist.xyz/sitemap.xml">
 
   <!-- Open Graph -->
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="BE Playsound List - Minecraft Bedrock Edition Sound Library">
-  <meta property="og:description" content="A complete searchable sound library for Minecraft Bedrock Edition — listen to all playsound events directly in your browser.">
-  <meta property="og:url" content="https://playsoundlist.xyz/">
-  <meta property="og:image" content="https://playsoundlist.xyz/assets/og-image.png">
+<meta property="og:type" content="website">
+<meta property="og:title" content="BE Playsound List - Minecraft Bedrock Edition Sound Library">
+<meta property="og:description" content="A complete searchable sound library for Minecraft Bedrock Edition — listen to all playsound events directly in your browser.">
+<meta property="og:url" content="https://playsoundlist.xyz/">
+<meta property="og:image" content="https://playsoundlist.xyz/assets/og-image.png">
+<meta property="og:image:secure_url" content="https://playsoundlist.xyz/assets/og-image.png">
+<meta property="og:image:type" content="image/png">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
 
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="BE Playsound List - Minecraft Bedrock Edition Sound Library">
-  <meta name="twitter:description" content="Listen to every Minecraft BE sound event, all in one searchable sound library.">
-  <meta name="twitter:image" content="https://playsoundlist.xyz/assets/og-image.png">
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="BE Playsound List - Minecraft Bedrock Edition Sound Library">
+<meta name="twitter:description" content="Listen to every Minecraft BE sound event, all in one searchable sound library.">
+<meta name="twitter:image" content="https://playsoundlist.xyz/assets/og-image.png">
 
   <!-- JSON-LD Structured Data -->
   <script type="application/ld+json">
